"Fixed images on mobile devices"

--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -1,6 +1,7 @@
 .goingup0 {
   content: url("../images/thumbnail-GoingUp.png");
   max-width: 763px;
+  width: 100%;
   height: 100%;
 }
 .goingup-thumbnail {
@@ -9,6 +10,7 @@
 }
 .goingup1 {
   content: url("../images/GoingUp2.png");
+  width: 100%;
   max-width: 700px;
   height: 100%;
 }
